Fix TIFF file size bloating after each overwrite

Unlike the stdio library TIFF image files may not be opened for both
reading and writing; there is no support for altering the contents of a
TIFF file.
(https://libtiff.gitlab.io/libtiff/libtiff.html#basic-file-handling)
However, function TIFFFdOpen do not truncate the TIFF file before
the owerrite. When libtiff writes new data to existing file, the old
data is not deleted.

Solution:
Truncate the TIFF file before calling the function TIFFFdOpen.

BUG:500870